# fragtale

./: .containerignore  .gitignore  Cargo.toml  Containerfile  README.md  build.rs  deny.toml  index.yaml
.github/workflows/: release-on-merge.yml
charts/fragtale-k8cs/: Chart.yaml  values.yaml
doc/: metrics_and_auto_scaling.md  quick_start.md  trusted_events.md
fragtale/: Cargo.toml  README.md
fragtale-api/: Cargo.toml  README.md  openapi.json
fragtale-api/src/: lib.rs  rest_api.rs
fragtale-api/src/rest_api/common/: api_error_mapper.rs  bearer_token_authentication_checker.rs  next_query_params.rs  utoipa_security_scheme_modifier.rs
fragtale-api/src/rest_api/common/bearer_token_authentication_checker/: jwks_cache.rs  kubernetes_integration.rs
fragtale-api/src/rest_api/http_resources/: confirm_delivery.rs  event_by_correlation_resource.rs  event_by_id_resource.rs  event_description_resource.rs  event_ids_by_index_resource.rs  event_poll_resource.rs  publish_resource.rs
fragtale-api/src/rest_api/ws_resources/: ws_confirm_resource.rs  ws_publish_resource.rs  ws_subscribe_resource.rs
fragtale-client/: Cargo.toml  README.md
fragtale-client/examples/: event_handler.rs
fragtale-client/src/: event_client.rs  lib.rs  rest_api_client.rs  time.rs
fragtale-client/src/authentication/: client_authentication.rs
fragtale-client/src/event_client/: event_processor.rs  event_source.rs  web_socket_pool.rs
fragtale-client/src/event_client/web_socket_pool/: subscriber_command.rs  subscriber_response.rs  web_socket_connection.rs
fragtale-client/src/mb/: correlation_token.rs  event_descriptor.rs
fragtale-client/src/mb/event_descriptor/: descriptor_version.rs  event_schema.rs  extractor.rs
fragtale-core/: Cargo.toml  README.md
fragtale-core/src/: conf.rs  lib.rs  mb.rs
fragtale-core/src/conf/: api_config.rs  backend_config.rs  integrity_config.rs  limits_config.rs  metrics_config.rs
fragtale-core/src/mb/: consumers.rs  correlation_hotlist.rs  event_descriptor_cache.rs  integrity.rs  mb_metrics.rs  object_count_tracker.rs  pre_storage_processor.rs  unique_time_stamper.rs
fragtale-core/src/mb/auth/: access_control.rs  client_identity.rs
fragtale-core/src/mb/auth/access_control/: access_control_cache.rs  policy_engine.rs  policy_engine_local.rs
fragtale-core/src/mb/consumers/: topic_consumer.rs
fragtale-core/src/mb/consumers/topic_consumer/: consumer_delivery_cache.rs
fragtale-core/src/mb/event_descriptor_cache/: per_topic_event_descriptor.rs
fragtale-core/src/mb/integrity/: integrity_consolidator.rs  integrity_protector.rs  integrity_validator.rs
fragtale-core/src/mb/integrity/common/: integrity_error.rs  integrity_protection.rs  integrity_protection_reference.rs  integrity_secrets_holder.rs
fragtale-core/src/mb/object_count_tracker/: per_topic_tracker.rs
fragtale-core/src/mb/object_count_tracker/per_topic_tracker/: local_object_count.rs  per_instance_count.rs
fragtale-core/src/mb/pre_storage_processor/: jsonpointer_extraction.rs  jsonschema_validation.rs
fragtale-core/src/util/: bdtd_builder.rs  lockless_caching_filter.rs  log_scope_duration.rs  signal_awaiter.rs  trusted_time.rs
fragtale-dbp/: Cargo.toml  README.md
fragtale-dbp-cassandra/: Cargo.toml  README.md
fragtale-dbp-cassandra/src/: cassandra_provider.rs  lib.rs
fragtale-dbp-cassandra/src/cassandra_provider/: cassandra_facades.rs  cassandra_result_mapper.rs  cassandra_schema.rs  cassandra_session.rs  entity.rs  schema_tracker.rs
fragtale-dbp-cassandra/src/cassandra_provider/cassandra_facades/: cassandra_authorization_facade.rs  cassandra_consumer_delivery_facade.rs  cassandra_event_facade.rs  cassandra_event_tracking_facade.rs  cassandra_instance_id_facade.rs  cassandra_integrity_protection_facade.rs  cassandra_topic_facade.rs
fragtale-dbp-cassandra/src/cassandra_provider/entity/: consumer_entity.rs  delivery_intent_entity.rs  event_descriptor_entity.rs  event_entity.rs  event_id_by_unique_time_entity.rs  identity_claim_entity.rs  integrity_by_level_and_time_entity.rs  integrity_by_level_and_time_lookup_entity.rs  integrity_entity.rs  object_count_entity.rs  resource_grant_entity.rs  topic_entity.rs  unique_time_bucket_by_shelf.rs
fragtale-dbp-cassandra/src/cassandra_provider/schema_tracker/: gossip_tracker.rs
fragtale-dbp-cassandra/src/cassandra_provider/schema_tracker/gossip_tracker/: cluster_schema_version.rs
fragtale-dbp-mem/: Cargo.toml  README.md
fragtale-dbp-mem/src/: inmemdb_provider.rs  lib.rs
fragtale-dbp-mem/src/inmemdb_provider/: inmem_facades.rs  inmem_topic.rs
fragtale-dbp-mem/src/inmemdb_provider/inmem_facades/: inmem_authorization_facade.rs  inmem_consumer_delivery_facade.rs  inmem_event_facade.rs  inmem_event_tracking_facade.rs  inmem_instance_id_facade.rs  inmem_integrity_protection_facade.rs  inmem_topic_facade.rs
fragtale-dbp-mem/src/inmemdb_provider/inmem_topic/: inmem_consumer.rs  inmem_event.rs
fragtale-dbp-mem/src/inmemdb_provider/inmem_topic/inmem_consumer/: inmem_delivery_intent.rs
fragtale-dbp/src/: dbp.rs  lib.rs
fragtale-dbp/src/dbp/: facades.rs
fragtale-dbp/src/dbp/facades/: authorization_facade.rs  consumer_delivery_facade.rs  event_facade.rs  event_tracking_facade.rs  instance_id_facade.rs  integrity_protection_facade.rs  topic_facade.rs
fragtale-dbp/src/mb/: extracted_value.rs  message_broker_error.rs  topic_event.rs  unique_time.rs
fragtale-dbp/src/mb/consumers/: delivery_intent_template.rs  delivery_intent_template_insertable.rs  event_delivery_gist.rs
fragtale-dbp/src/mb/correlation/: correlation_result_listener.rs
fragtale-dbp/src/mb/object_count_tracker/: object_count.rs  object_count_type.rs
fragtale-metrics/: Cargo.toml  README.md
fragtale-metrics/src/: http_metrics_resource.rs  lib.rs  metric.rs  registry.rs
fragtale-metrics/src/metric/: metric_label.rs  metric_labeled_value.rs  metric_type.rs
fragtale-metrics/src/registry/: metrics_provider.rs  metrics_result.rs  metrics_result_future.rs  metrics_results.rs
fragtale-metrics/src/util/: atomic_metric_average.rs
fragtale/src/: main.rs
(+16 files in other folders)
