[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "fragtale_client"
description = "Ceso client library"

[dependencies]

tyst = { workspace = true, features = [] }
#upkit_common = { workspace = true, features = [] }

tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "signal", "fs"] }

# Logging and tracing
log = { workspace = true, features = [] }
env_logger = { workspace = true, features = [] }

# Async and concurrency
async-trait = { workspace = true, features = [] }
crossbeam-skiplist = { workspace = true, features = [] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

serde = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }
serde_with = { workspace = true, features = [] }

utoipa = { version = "5", features = ["actix_extras"] }

# HTTP API client
reqwest = { workspace = true, features = [] }
#reqwest-websocket = { version = "0.4", default-features = false, features = ["json"] }

# WebSocket API client
tokio-tungstenite = { version = "0.27", default-features = false, features = ["default", "rustls"] }
