[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "fragtale_core"
description = "Fragtale core"

[dependencies]
fragtale_client = { path = "../fragtale-client" }
fragtale_dbp = { path = "../fragtale-dbp" }
fragtale_dbp_cassandra = { path = "../fragtale-dbp-cassandra" }
fragtale_dbp_mem = { path = "../fragtale-dbp-mem" }
fragtale_metrics = { path = "../fragtale-metrics" }

tyst = { workspace = true, features = [] }
#upkit_common = { workspace = true, features = [] }

# Async and concurrency
async-trait = { workspace = true, features = [] }
crossbeam-skiplist = { workspace = true, features = [] }
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
tokio = { workspace = true, features = [] }

# Logging and tracing
log = { workspace = true, features = [] }
env_logger = { workspace = true, features = [] }

# Config and platform info
config = { version = "0.14", default-features = false, features = ["json"] }
cgroups-rs = "0.3"

# JSON
serde = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }
serde_with = { workspace = true, features = [] }

# JSONSchema
jsonschema = { version = "0.32", default-features = false, features = ["draft201909", "draft202012"] }

# NTP client
sntpc = { version = "0.5.2", default-features = false, features = ["std", "tokio-socket"] }

# Memory efficiency
#arrayvec = "0.7"

