[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "fragtale_dbp_cassandra"
description = "Fragtale Cassandra database provider"

[dependencies]

fragtale_client = { path = "../fragtale-client" }
fragtale_dbp = { path = "../fragtale-dbp" }

# https://github.com/krojew/cdrs-tokio
# https://docs.rs/cdrs-tokio/latest/cdrs_tokio/
cdrs-tokio = { version = "8.1", default-features = false, features = ["derive", "rust-tls"] }
uuid = { version = "1.10", default-features = false }

# Async and concurrency
async-trait = { workspace = true, features = [] }
tokio = { workspace = true, features = [] }
crossbeam-skiplist = { workspace = true, features = [] }
#futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Logging and tracing
log = { workspace = true, features = [] }

# Memory efficiency
arrayvec = "0.7"

