[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "fragtale_dbp_mem"
description = "Fragtale in-memory database provider"

[dependencies]

fragtale_client = { path = "../fragtale-client" }
fragtale_dbp = { path = "../fragtale-dbp" }

# Async and concurrency
async-trait = { workspace = true, features = [] }
crossbeam-skiplist = { workspace = true, features = [] }

# Logging and tracing
log = { workspace = true, features = [] }
