[package]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
name = "fragtale_dbp"
description = "Fragtale database provider commons"

[dependencies]

tyst = { workspace = true, features = [] }

# Logging and tracing
log = { workspace = true, features = [] }

# Async and concurrency
async-trait = { workspace = true, features = [] }

# REST API
#serde = { workspace = true, features = [] }
serde_json = { workspace = true, features = [] }
#serde_with = { workspace = true, features = [] }

# JSONSchema
#jsonschema = { version = "0.18", default-features = false, features = ["draft201909", "draft202012"] }

